--- a/report.html
+++ b/report.html
@@ -13461,6 +13461,20 @@ There are 836 test dog images.
 </div>
 
 </div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="nb">print</span><span class="p">(</span><span class="s2">&quot;</span><span class="si">{0}</span><span class="s2"> faces detected in human_files&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">count_nonzero</span><span class="p">(</span><span class="n">vface</span><span class="p">(</span><span class="n">human_files</span><span class="p">[:</span><span class="mi">1000</span><span class="p">]))))</span>
+<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;</span><span class="si">{0}</span><span class="s2"> faces detected in dog_files&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">count_nonzero</span><span class="p">(</span><span class="n">vface</span><span class="p">(</span><span class="n">dog_files</span><span class="p">[:</span><span class="mi">1000</span><span class="p">]))))</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -13680,6 +13694,20 @@ $$<p>Here, <code>nb_samples</code> is the number of samples, or number of images
 </div>
 </div>
 
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="nb">print</span><span class="p">(</span><span class="s2">&quot;</span><span class="si">{0}</span><span class="s2"> faces detected in human_files&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">count_nonzero</span><span class="p">(</span><span class="n">vdog</span><span class="p">(</span><span class="n">human_files</span><span class="p">[:</span><span class="mi">1000</span><span class="p">]))))</span>
+<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;</span><span class="si">{0}</span><span class="s2"> faces detected in dog_files&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">count_nonzero</span><span class="p">(</span><span class="n">vdog</span><span class="p">(</span><span class="n">dog_files</span><span class="p">[:</span><span class="mi">1000</span><span class="p">]))))</span>
+</pre></div>
+
+    </div>
 </div>
 </div>
 
@@ -14817,11 +14845,11 @@ Epoch 20/20
 <span class="sd">    &quot;&quot;&quot;</span>
     
     <span class="n">species</span> <span class="o">=</span> <span class="s2">&quot;Other&quot;</span>
-    <span class="k">if</span> <span class="n">face_detector</span><span class="p">(</span><span class="n">image_path</span><span class="p">):</span>
-        <span class="n">species</span> <span class="o">=</span> <span class="s2">&quot;Human&quot;</span>
-    <span class="k">elif</span> <span class="n">dog_detector</span><span class="p">(</span><span class="n">image_path</span><span class="p">):</span>
+    <span class="k">if</span> <span class="n">dog_detector</span><span class="p">(</span><span class="n">image_path</span><span class="p">):</span>
         <span class="n">species</span> <span class="o">=</span> <span class="s2">&quot;Dog&quot;</span>
-        
+    <span class="k">elif</span> <span class="n">face_detector</span><span class="p">(</span><span class="n">image_path</span><span class="p">):</span>
+        <span class="n">species</span> <span class="o">=</span> <span class="s2">&quot;Human&quot;</span>
+
     <span class="k">if</span> <span class="n">species</span> <span class="o">==</span> <span class="s2">&quot;Other&quot;</span><span class="p">:</span>
         <span class="n">title</span> <span class="o">=</span> <span class="s2">&quot;You are not a Human or a Dog!&quot;</span>
     <span class="k">else</span><span class="p">:</span>
@@ -14864,9 +14892,17 @@ Epoch 20/20
 <p><strong>Question 6:</strong> Is the output better than you expected :) ?  Or worse :( ?  Provide at least three possible points of improvement for your algorithm.</p>
 <p><strong>Answer:</strong></p>
 <ul>
-<li>Output looks better than I expected :)</li>
+<li>Output looks better than I expected :)<ul>
 <li>Examples from training data are matched correctly</li>
-<li>Other examples are at least plausible</li>
+<li>Even the dog breeds for humans are at least plausible</li>
+</ul>
+</li>
+<li>Possible improvements<ul>
+<li>Fine-tune the face detector to increase it's accuracy (for non-humans)</li>
+<li>Fine-tune the dog breed classifier to increase it's accuracy</li>
+<li>Use and display probabilties for each decision.</li>
+</ul>
+</li>
 </ul>
 
 </div>
@@ -15104,6 +15140,48 @@ Epoch 20/20
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">my_model</span><span class="o">.</span><span class="n">save</span><span class="p">(</span><span class="s2">&quot;saved_models/model.final.hdf5&quot;</span><span class="p">)</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">keras.models</span> <span class="k">import</span> <span class="n">load_model</span>
+ 
+<span class="n">saved_model</span> <span class="o">=</span> <span class="n">load_model</span><span class="p">(</span><span class="s2">&quot;saved_models/model.final.hdf5&quot;</span><span class="p">)</span>
+<span class="n">saved_model</span><span class="o">.</span><span class="n">summary</span><span class="p">()</span>
 </pre></div>
 
     </div>
